# test-project

./: .env.example  .env.prod.example  .gitignore  .taurignore  CLAUDE.md  Cargo.toml  LICENSE  SECURITY.md  SECURITY_FIXES_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  svelte.config.js  tauri.conf.json  validate-security-fixes.py  vite.config.ts
.claude/: settings.json
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: claude-review.yaml  claude-review.yml
legal-toolkit/: package.json  svelte.config.js
legal-toolkit/.svelte-kit/: ambient.d.ts
legal-toolkit/web-portal/: README.md  docker-compose.yml
legal-toolkit/web-portal/backend/: database.py  main.py
legal-toolkit/web-portal/frontend/: vite.config.js
scripts/: README.md  dev-all.sh  dev-desktop.sh  dev-quick.sh  dev-services.sh  dev-web.sh  format-all.sh  log-notification.sh  preserve-context.sh  security-scan.sh  session-cleanup.sh  subagent-log.sh  validate-env.sh  validate-security-fixes.py
src/: app.html  auth.rs  main.rs
src/lib/: auth.ts  stores.ts
src/lib/components/: Dashboard.svelte  Drawer.svelte  EvidenceView.svelte  Header.svelte
src/routes/: +layout.svelte  +page.svelte
web-portal/: start.sh
web-portal/backend/: .env.example  Dockerfile.prod  auth.py  database.py  init.sql  main.py  models.py  requirements.txt  schemas.py
web-portal/backend/tests/: conftest.py  test_auth.py
web-portal/frontend/: .env.example  Dockerfile.prod  nginx.conf  package-lock.json  package.json
(+34 files in other folders)
