[package]
name = "legal-toolkit"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
keyring = "2.0"  # Secure token storage
dotenv = "0.15"  # Environment configuration

# Future: add biometric authentication
# [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
# tauri-plugin-authenticator = { version = "2.0.0-rc.1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
